post and append working, debugging the delete function. Recieving ERR_ERR_EMPTY_RESPONSE on path

--- a/views/partials/tasks/task-block.handlebars
+++ b/views/partials/tasks/task-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{name}}
 
-	<button class="change-completed" data-id="{{id}}" data-newsleep="{{sleep}}">
-		{{#if sleep}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
+	<button class="change-completed" data-id="{{id}}" data-newcompleted="{{completed}}">
+		{{#if completed}}In Progress{{else}}Completed{{/if}}
 	</button>
 
-	<button class="delete-task" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-task" data-id="{{this.id}}">DELETE</button>
 </li>
