--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,14 +24,14 @@
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Task Name:</label>
+    <label for="ta">Task Name:</label>
     <input type="text" id="ta" name="name">
   </div>
 
   <div class="form-group">
-    <label for="sleepy">Completed?</label><br>
-    <input type="radio" name="completed" value="1" checked> Completed!<br>
-    <input type="radio" name="completed" value="0"> Awake
+    <label for="completed">Completed?</label><br>
+    <input type="radio" name="completed" value="1" checked> In Progress<br>
+    <input type="radio" name="completed" value="0"> Cmpleted
   </div>
 
   <button type="submit">Add Task</button>
