Delete working. App functionality in place, next working on styling and UI

--- a/views/partials/tasks/task-block.handlebars
+++ b/views/partials/tasks/task-block.handlebars
@@ -1,5 +1,5 @@
 <li>
-	{{name}}
+	{{task_name}}
 
 	<button class="change-completed" data-id="{{id}}" data-newcompleted="{{completed}}">
 		{{#if completed}}In Progress{{else}}Completed{{/if}}
