--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,5 +12,11 @@
    {{!-- <div class="container">  --}}
 {{{ body }}}
 	{{!-- </div> --}}
+<div class="jumbotron jumbotron-fluid mb-0">
+	<div class="container">
+		<h1 class="display-4">Control Your Day</h1>
+		<p class="lead">Easily manage your productivity</p>
+	</div>
+</div>
   </body>
 </html>
