--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1 text-center">Project Board</span>
+<nav class="navbar navbar-light bg-light  shadow-sm mb-5 justify-content-center">
+  <span class="mb-1 h1">PROJECT BOARD</span>
 </nav>
 <div class="container">
   <div class="clearfix">
@@ -13,7 +13,7 @@
             {{/each}}
           </ul>
       </div>
-    <div id="completedTask" class="col-6 text-right float-right">
+    <div id="completedTask" class="col-6 float-right">
       <h2 class="text-center">Tasks Completed</h2>
         <ul>
           {{#each tasks}}
@@ -28,20 +28,21 @@
 <div class="container">
   <div class="col">
     <div class="addNewTask text-center  mt-5">
-      <h3>Add a New Task</h3>
+      <h3>Add New Task</h3>
         <form class="create-form">
           <div class="form-group">
-            <label for="ta"></label>
-            <input class="" type="text" id="ta" name="name">
+            {{!-- <label for="ta"></label> --}}
+            <input class="" type="text" id="ta" name="name" style="width: 500px; height: 100px">
           </div>
           <div class="form-group">
             {{!-- <label for="completed">Completed?</label><br> --}}
             {{!-- <input type="radio" name="completed" value="1" checked> In Progress<br> --}}
             <input class="hide" type="radio" name="completed" value="0">
           </div>
-          <button class="btn-info rounded shadow-sm" type="submit">Add Task</button>
+          <button class="btn-info rounded shadow-md" type="submit">Add Task</button>
         </form>
     </div>
   </div>
 </div>
+
 
