--- a/views/partials/tasks/task-block.handlebars
+++ b/views/partials/tasks/task-block.handlebars
@@ -1,13 +1,18 @@
-
 <li class="card shadow-sm">
-    {{task_name}}
-
-    <button class="change-completed btn-success rounded mx-auto" data-id="{{id}}" data-newcompleted="{{completed}}">
-        {{#if completed}}Completed
-    </button>
-        <button class="change-completed btn-info rounded mx-auto" data-id="{{id}}" data-newcompleted="{{completed}}">
-        {{else}}Revise{{/if}}
-    </button>
-
-    <button class="delete-task btn-danger rounded mx-auto mt-1" data-id="{{this.id}}">Delete</button>
+<div class="card mb-3" style="max-width: 450px, height: 150px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+        <img src="/assets/img/ivan-shilov-_rWC40pYIwk-unsplash.jpg" class="card-img" alt="push pin image">
+    </div>
+    <div class="col-md-8">
+       <div class="card-body">
+        <h5 class="card-title">{{task_name}}</h5>
+        {{!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> --}}
+      </div>
+    </div>
+  </div>
+</div>
+<button class="change-completed btn-info rounded mx-auto" data-id="{{id}}" data-newcompleted="{{completed}}">{{#if completed}}Completed{{else}}Revise{{/if}}</button>
+<button class="delete-task btn-danger rounded mx-auto mt-1" data-id="{{this.id}}">Delete</button>
 </li>
