updating readme with demo.gif

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light  shadow-sm mb-5 justify-content-center">
+<nav class="navbar navbar-light bg-light  shadow-lg mb-5 justify-content-center bg-dark text-white">
   <span class="mb-1 h1">PROJECT BOARD</span>
 </nav>
 <div class="container">
