--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<title>Project Board</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/tasks.js"></script>
@@ -12,7 +13,7 @@
    {{!-- <div class="container">  --}}
 {{{ body }}}
 	{{!-- </div> --}}
-<div class="jumbotron jumbotron-fluid mb-0">
+<div class="jumbotron jumbotron-fluid mb-0 bg-dark text-white">
 	<div class="container">
 		<h1 class="display-4">Control Your Day</h1>
 		<p class="lead">Easily manage your productivity</p>
